# ExamGPTCloud

./: .gitignore  README.md
examgpt-backend/: README.md  package-lock.json  pyproject.toml  samconfig.toml  template.yaml  template_old.yaml
examgpt-backend/.aws-sam/: build.toml
examgpt-backend/assets/: chat.md  create_exam.md  create_exam_ai.md  data_flow_diagram.md  sequence_diagram.md
examgpt-backend/events/chat_server/: body.json  simple_event.json  whoami_event.json
examgpt-backend/events/chunker/: s3_event.json
examgpt-backend/events/create_exam/: create_with_code.json  create_without_code.json
examgpt-backend/events/generate/: simple_sns.json
examgpt-backend/events/validate/: simple_sns.json
examgpt-backend/examgpt_backend/: .env.example  chunker.Dockerfile  chunker.py  generate.py  requirements.txt  sandbox.py  upload.Dockerfile  upload.py
examgpt-backend/examgpt_backend/adapter/ai/: ai_service_ext.py  aimodel.py  constants.py  prompts.py  prompts.yaml
examgpt-backend/examgpt_backend/adapter/aws/: content_service_s3.py  (+5 more)
examgpt-backend/examgpt_backend/ai/: base.py
examgpt-backend/examgpt_backend/assets/: exam_ready.html
examgpt-backend/examgpt_backend/core/: chunk.py  config.py  exam.py
examgpt-backend/examgpt_backend/entrypoints/: sandbox.py  upload.py
examgpt-backend/examgpt_backend/storage/: cloud.py
examgpt-backend/scripts/: cleanup.py  cleanup.sh  clear_configure_logs.py  delete_s3_objects.sh  deploy.sh  list_ecr_repos.sh  setup_telegram_webhook.py  store_env_in_cloud.py  store_env_in_cloud.sh  upload_file.py
(+53 files in other folders)
