[tool.poetry]
name = "examgpt-backend"
version = "0.1.0"
description = ""
authors = ["Rajesh Korde <rajesh.korde@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
boto3 = "^1.34.139"
boto3-stubs = "^1.34.139"
requests = "^2.32.3"
tiktoken = "^0.7.0"
python-dotenv = "^1.0.1"
loguru = "^0.7.2"
pydantic-settings = "^2.3.4"
python-telegram-bot = "^21.3"
langchain = "^0.2.6"
langchain-core = "^0.2.11"
langchain-community = "^0.2.6"
openai = "^1.35.10"
langchain-openai = "^0.1.14"
codenamize = "^1.2.3"
unstructured = "^0.14.9"


[tool.poetry.group.dev.dependencies]
jupyterlab = "^4.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
